# SoftRenderer

./: .gitignore  CMakeLists.txt  README.md
src/RTRenderer/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/Rasterizer/: DrawTriangle.cpp  DrawTriangle.hpp  MVP.hpp  RasTriangle.cpp  RasTriangle.hpp  Shader.cpp  Shader.hpp  Texture.hpp  rasterizer.cpp  rasterizer.hpp
src/frame/: Material.hpp  OBJ_Loader.cpp  OBJ_Loader.h  Object.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
